--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
     </header>
 
-    <main>
+    <main >
         <section id="hero" class="hero-section container">
             <div class="hero-content fade-in-up">
                 <span class="badge">Desenvolvedor Web</span>
@@ -66,7 +66,7 @@
             </div>
         </section>
 
-        <section id="about" class="about-section container section-padding">
+        <section  id="about" class="about-section container section-padding">
             <div class="section-header fade-in-up">
                 <h2>Sobre Mim</h2>
                 <p>Um pouco sobre quem eu sou e o que eu faço.</p>
@@ -115,7 +115,7 @@
                         <h3>Responsividade</h3>
                         <p>Garantindo que seu site fique ótimo em todos os dispositivos.</p>
                     </div>
-                </div> do p
+                </div> 
             </div>
         </section>
 
@@ -227,11 +227,11 @@
                     <div class="contact-info">
                         <div class="info-item">
                             <i data-feather="mail"></i>
-                            <span>ola@lucas.dev</span>
+                            <span>spacelooktech@gmail.com</span>
                         </div>
                         <div class="info-item">
                             <i data-feather="map-pin"></i>
-                            <span>São Paulo, Brasil</span>
+                            <span>Pelotas - RS, Brasil</span>
                         </div>
                     </div>
                     <div class="social-links">
