Fixing orthography and responsiveness

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="about-text fade-in-up">
 <!--                     <p>Sou um Desenvolvedor Web apaixonado com talento para criar sites limpos, modernos e amigáveis ao usuário. Com uma base sólida em HTML, CSS e JavaScript, adoro transformar problemas complexos em designs simples, bonitos e intuitivos.</p>
                     <p>Quando não estou codificando, você pode me encontrar explorando novas tecnologias, contribuindo para projetos de código aberto ou desfrutando de uma boa xícara de café.</p> -->
-                    <p>Sou Desenvolvedor Web com formação em Análise e Desenvolvimento de Sistemas e com 3+ anos de experiência. Atuo na concepção, desenvolvimento e manutenção de sistemas de alta performance e arquiteturas escaláveis. e com talento para criar sites limpos, modernos e amigáveis ao usuário. 
+                    <p>Sou Desenvolvedor Web com formação em Análise e Desenvolvimento de Sistemas e com 3+ anos de experiência. Atuo na concepção, desenvolvimento e manutenção de sistemas de alta performance e arquiteturas escaláveis, criando sites limpos, modernos e amigáveis ao usuário. 
                     Com uma base sólida em HTML, CSS e JavaScript, React.js, Node.js, MongoDB e PostgresSQL adoro transformar problemas complexos em soluções simples, intuitivas e performáticas.</p>
                     <p>Voces quer tirar uma projeto do papel? Vou te ajudar a transformar essa ideia em realidade.</p>
                     <div class="skills-list">
